--- a/CBNU_Kiosk_main/bugger/templates/bugger/young_order.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/young_order.html
@@ -195,7 +195,7 @@
 
 <!--세트메뉴 변경 모달 창 css-->
 
-<section class="my-md-5">
+<section class="my-md-2">
     <div class="row justify-content-center">
         <!-- Portfolio Grid Items-->
         <ul class="tab_title topbar" style="text-align:center;">
@@ -223,7 +223,7 @@
             <!--와퍼 -->
         <div class="row justify-content-center" id="menu_content--Whopper" style="display: auto;">
             {% for menu in Whopper_all %}
-                <div class="col-md-4 col mb-5">
+                <div class="col-md-2 col mb-2">
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal{{menu.id}}">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -283,7 +283,7 @@
         <!--버거-->
          <div class="row justify-content-center" id="menu_content--bugger" style="display: none;">
             {% for menu in bugger_all %}
-                <div class="col-md-4 col mb-5">
+                <div class="col-md-2 col mb-2">
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal{{menu.id}}">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -338,7 +338,7 @@
 
         <div class="row justify-content-center" id="menu_content--drink" style="display: none;">
             {% for menu in drink_all %}
-                <div class="col-md-4 col mb-5">
+                <div class="col-md-2 col mb-2">
                     <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal{{menu.id}}">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                             <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -396,7 +396,7 @@
 
     <div class="row justify-content-center" id="menu_content--Premium" style="display: none;">
     {% for menu in Premium_all %}
-        <div class="col-md-4 col">
+        <div class="col-md-2 col-2">
             <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal{{menu.id}}">
                 <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
@@ -437,11 +437,15 @@
                                     </div>
                                     <button class="btn btn-in-modal btn-primary" data-bs-dismiss="modal" id="addToCart--{{menu.title}}">
                                         <i class="fas fa-xmark fa-fw"></i>
-                                        장바구니 담기
+                                        단품
+                                    </button>
+                                    <button class="btn btn-in-modal btn-primary" data-bs-dismiss="modal" id="setMenuBtn--{{menu.title}}">
+                                        <i class="fas fa-xmark fa-fw"></i>
+                                        세트메뉴로 하기
                                     </button>
                                     <button class="btn btn-in-modal btn-secondary" data-bs-toggle="modal" data-bs-target="#subModal{{menu.id}}">
                                         <i class="fas fa-info-circle fa-fw"></i>
-                                       세트메뉴추가
+                                       세트메뉴변경
                                     </button>
                                 </div>
                             </div>
@@ -450,23 +454,60 @@
                 </div>
             </div>
         </div>
-        <!-- 세트-modal -->
+                    <!-- 세트-modal -->
         <div class="modal fade" id="subModal{{menu.id}}" tabindex="-1" aria-labelledby="subModalLabel{{menu.id}}" aria-hidden="true">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="subModalLabel{{menu.id}}">추가 정보: {{menu.title}}</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
-                    </div>
-                    <div class="modal-body">
-                        <!-- 여기에 추가 정보 내용을 넣어주세요 -->
-                        <!-- 예: {{menu.additional_info}} -->
-                    </div>
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="subModalLabel{{menu.id}}">메뉴 목록</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    {% for subMenu in set_change_all %}
+                        <div class="col-md-2 col-2">
+                            <div class="portfolio-item mx-auto">
+                                <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                    <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <!-- Product image-->
+                                <img class="card-img-top" id="{{subMenu.title}}--image" src="{{subMenu.image|fix_route|default:'https://dummyimage.com/450x300/dee2e6/6c757d.jpg'}}" alt="..." />
+                                <!-- Product details-->
+                                <div class="card-body p-4">
+                                    <div class="text-center">
+                                        <!-- Menu name-->
+                                        <h3 class="fw-bolder">{{subMenu.title|fix_title|linebreaks}}</h3>
+                                        <!-- Menu price-->
+                                        <h4 class="fw-normal" id="{{subMenu.title}}--price">{{subMenu.price}} 원</h4>
+                                        <!-- Menu Calorie-->
+                                        <h5 class="fw-light text-muted">{{subMenu.calorie}} Kcal</h5>
+                                        <!-- Checkbox -->
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="{{subMenu.id}}" id="menuCheckbox{{subMenu.id}}" name="menuCheckbox">
+                                            <label class="form-check-label" for="menuCheckbox{{subMenu.id}}">
+                                                선택
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+                <div class="text-center mt-3">
+                    <button class="btn btn-in-modal btn-primary" data-bs-dismiss="modal" id="setMenuBtn--{{menu.title}}">
+                        <i class="fas fa-xmark fa-fw"></i>
+                        세트메뉴로 하기
+                    </button>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
     {% endfor %}
 </div>
+
 
 
 
@@ -562,7 +603,7 @@
 
 
 </style>
-<!-- Portfolio Section-->
+<!-- 밑에 결제하는 부분 Section-->
 <section class="bottombar">
     <form id="order_submission" action="{% url 'bugger:old_confirm' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
@@ -586,15 +627,17 @@
     </div>
     <div class="payment">
         <div class="row">
+
             <div id="pay-cancel" class="py-3" OnClick="location.href ='{% url 'bugger:home' %}'" style="cursor:pointer;" >
                 <h5 class="fw-bolder">취소하기</h5>
             </div>
+
             <div id="pay" class="py-3" OnClick="order_now();" style="cursor:pointer;">
                 <div class="row">
-                    <div class="col-5 text-white" style="text-align: left; padding-left: 10%;"><h5>결제하기</h5></div>
+                    <div class="col-5 text-white" style="text-align: left; padding-left: 10%;"><h10>결제하기</h10></div>
                     <div class="col-1 text-white" style="text-align: left;">￦</div>
                     <div class="col-3 text-white" id="total-money" style="text-align: right; padding-right: 10%;"><h5>0</h5></div>
-                    <div class="col-3 text-white"><h5><i class="bi bi-chevron-right" style="text-align:left;"></i></h5></div>
+                    <div class="col-3 text-white"><h6><i class="bi bi-chevron-right" style="text-align:left;"></i></h6></div>
                 </div>
             </div>
         </div>
