tts 함수/ html에서 잘 되는지 출력

--- a/CBNU_Kiosk_main/bugger/templates/bugger/young_order.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/young_order.html
@@ -153,8 +153,10 @@
 
 <!--맨 위에 메뉴 바 --->
 
+
 <section class="my-md-2">
-    <div class="row justify-content-center">
+
+    <nav class="navbar-expand-lg order-py-5">
         <!-- Portfolio Grid Items-->
         <ul class="tab_title topbar" style="text-align:center;">
 
@@ -174,8 +176,7 @@
                 <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none; ">drink</h3>
             </li>
         </ul>
-    </div>
-
+</nav>
 <!-- 전체 정렬 div--->
  <div class="row justify-content-center">
         <!--와퍼 탭 --->
