음성인식 realtimecall/구글 cloud speech api 음성인식 잘 됨

--- a/CBNU_Kiosk_main/bugger/templates/bugger/old_order.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/old_order.html
@@ -635,6 +635,7 @@
             </div>
         {% endfor %}
     </div>
+     <a href="javascript:void(0);" onclick="apic();">페이지 이동 없이 api 호출</a>
 </div>
 
 
@@ -956,6 +957,32 @@ for (let i = 0; i < setMenuBtn.length; i++) {
     for(let i=0;i<addCartButton.length;i++){
         addCartButton[i].addEventListener('click', addCartButtonClickHandle);
     }
+
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript">
+    var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+}
+$.ajaxSetup({
+    beforeSend: function (xhr, settings) {
+        if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+            xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        }
+    }
+});
+
+function apic(){
+    $.ajax({
+    url : "{% url 'bugger:apic' %}",
+    type : "post",
+    }).done(function (data) {
+        document.getElementById('stt').innerHTML = data;
+    });
+
+}
 
 </script>
 
