--- a/CBNU_Kiosk_main/bugger/templates/bugger/old_order.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/old_order.html
@@ -155,27 +155,9 @@
 
 
 <section class="my-md-2">
-    <nav class="navbar-expand-lg order-py-5">
         <!-- Portfolio Grid Items-->
-        <ul class="tab_title topbar" style="text-align:center;">
 
-            <li class="on" id="menu_type--Whopper">
-                <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none; ">Whopper</h3>
-            </li>
-            <li id="menu_type--bugger">
-                <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none; ">bugger</h3>
-            </li>
-            <li id="menu_type--Premium">
-                <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none; ">Premium</h3>
-            </li>
-            <li id="menu_type--side">
-                <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none; ">side</h3>
-            </li>
-            <li id="menu_type--drink">
-                <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none; ">drink</h3>
-            </li>
-        </ul>
-</nav>
+
  <audio controls autoplay>
         <source src="{% url 'bugger:tts_view' %}" type="audio/mpeg">
         Your browser does not support the audio element.
@@ -638,6 +620,60 @@
      <a href="javascript:void(0);" onclick="apic();">페이지 이동 없이 api 호출</a>
 </div>
 
+<div class="bottombar">
+    <form id="order_submission" action="{% url 'bugger:old_confirm' %}" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+    </form>
+    <div class="cart-info py-3 bg-secondary">
+        <div class="row" id="cart">
+            <div class="row" id="headingOne">
+                <button class="btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <h4 class="text-white fw-bolder">주문한 상품 <sup>0</sup></h4>
+                </button>
+            </div>
+            <div class="row accordion-collapse collapse" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#cart">
+                <div class="accordion-body">
+                    <div class="row" id="cart-list">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="payment">
+        <div class="row">
+            <div id="pay" class="py-3" OnClick="order_now();" style="cursor:pointer;">
+                <div class="row">
+                    <div class="col-5 text-white" style="text-align: left; padding-left: 10%;"><h10>결제하기</h10></div>
+                    <div class="col-1 text-white" style="text-align: left;">￦</div>
+                    <div class="col-3 text-white" id="total-money" style="text-align: right; padding-right: 10%;"><h5>0</h5></div>
+                    <div class="col-3 text-white"><h6><i class="bi bi-chevron-right" style="text-align:left;"></i></h6></div>
+                </div>
+            </div>
+            <div id="pay-cancel" class="py-3" OnClick="location.href = '{% url 'bugger:home' %}'" style="cursor:pointer;">
+                <h5 class="fw-bolder">취소하기</h5>
+            </div>
+        </div>
+    </div>
+    <ul class="tab_title py-0" style="text-align:center;">
+    <li class="on" id="menu_type--Whopper">
+        <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none;">Whopper</h3>
+    </li>
+    <li id="menu_type--bugger">
+        <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none;">bugger</h3>
+    </li>
+    <li id="menu_type--Premium">
+        <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none;">Premium</h3>
+    </li>
+    <li id="menu_type--side">
+        <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none;">side</h3>
+    </li>
+    <li id="menu_type--drink">
+        <h3 class="masthead-heading text-center text-uppercase text-white mb-0" style="pointer-events: none;">drink</h3>
+    </li>
+</ul>
+
+</div>
 
 
 
@@ -732,49 +768,6 @@
 
 
 </style>
-<!-- 밑에 결제하는 부분 Section-->
-<section class="bottombar">
-    <form id="order_submission" action="{% url 'bugger:old_confirm' %}" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-    </form>
-    <!-- 주문한 상품--->
-    <div class="cart-info py-3 bg-secondary">
-        <div class="row" id="cart">
-            <div class="row" id="headingOne">
-                <button class="btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    <h4 class="text-white fw-bolder">주문한 상품 <sup>0</sup></h4>
-                </button>
-            </div>
-            <div class="row accordion-collapse collapse" id="collapseOne" aria-labelledby="headingOne" data-bs-parent="#cart">
-                <div class="accordion-body">
-                    <div class="row" id="cart-list">
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <div class="payment">
-        <div class="row">
-
-            <div id="pay-cancel" class="py-3" OnClick="location.href ='{% url 'bugger:home' %}'" style="cursor:pointer;" >
-                <h5 class="fw-bolder">취소하기</h5>
-            </div>
-
-            <div id="pay" class="py-3" OnClick="order_now();" style="cursor:pointer;">
-                <div class="row">
-                    <div class="col-5 text-white" style="text-align: left; padding-left: 10%;"><h10>결제하기</h10></div>
-                    <div class="col-1 text-white" style="text-align: left;">￦</div>
-                    <div class="col-3 text-white" id="total-money" style="text-align: right; padding-right: 10%;"><h5>0</h5></div>
-                    <div class="col-3 text-white"><h6><i class="bi bi-chevron-right" style="text-align:left;"></i></h6></div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-</section>
 
 
 <script>
