--- a/CBNU_Kiosk_main/bugger/templates/bugger/home.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/home.html
@@ -1,17 +1,23 @@
-{% extends 'index.html' %} 
+{% extends 'index.html' %}
 
 {% block content %}
 
 <!-- 가로 : 820 세로 : 1180-->
 <style>
+    @font-face {
+    font-family: 'yg-jalnan';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    }
     .py-custom {
         padding-top: 21.5% !important;
         padding-bottom: 21.5% !important;
-        
+
     }
 
     h1 {
-        color : black;
+        color : red;
         font-size : 32px;
     }
 
@@ -27,15 +33,19 @@
         margin-right: 0.5rem;
         padding: 1rem 5rem 0.4rem 5rem;
         border-radius: 2rem;
-        border: 4px solid #dedede;
+        border: 2px solid #DB4834;
+        font-family: 'yg-jalnan';
     }
 
     .background {
-        background-color: #F2F2F2;
+        background-color: #E6DFD7;
     }
 
     .vertical {
         vertical-align : middle;
+    }
+    img { display : block;
+        margin : auto;
     }
 </style>
 <style>
@@ -47,12 +57,13 @@
     .font1{
         color : #E51937;
         font-size : 32px;
+        font-family: 'yg-jalnan';
     }
 
     @font1 {
-        font-family: 'KOFIHDrLEEJWTTF-B';
-        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/KOFIHDrLEEJWTTF-B.woff2') format('woff2');
-        font-weight: 700;
+        font-family: 'yg-jalnan';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.2/JalnanOTF00.woff') format('woff');
+        font-weight: normal;
         font-style: normal;
     }
 
@@ -61,8 +72,8 @@
         font-size : 25px;
     }
     * {
-        font-family: 'KOFIHDrLEEJWTTF-B';
-    
+        font-family: 'yg-jalnan';
+
     }
 
 
@@ -82,13 +93,13 @@
 
 <header class="py-0">
         <div class="text-light-muted">
-            <img width="820" height="880" src="/static/assets/new_da.jpg" alt="logo" style="border-radius: 0%;"/>
-        </div> 
+            <img width="820" height="880" src="/static/assets/new_da.JPG" alt="logo" style="border-radius: 0%;"/>
+        </div>
     </div>
 </header>
- 
-<body class="background py-0">
-                    
+
+<body class="background py-0" >
+
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center" id="box">
             <div class="col-lg-6 box1" style="background-color:#FFFFFF;" OnClick="location.href ='{% url 'bugger:camera' %}?usage_type=restaurant'" >
